--- a/index2.html
+++ b/index2.html
@@ -910,7 +910,7 @@
               <div class="contact-block">
                 <form
                   id="contactForm"
-                  action="//formspree.io/technotree.sh@gmail.com"
+                  action="https://formspree.io/technotree.sh@gmail.com"
                   method="POST"
                 >
                   <div class="row">
